--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,7 +101,7 @@ body.scale-cv{
 }
 
 .scale-cv .bd-container{
-  max-width: 700px;
+  max-width: 1150px;
 }
 
 .scale-cv .section{
@@ -190,6 +190,7 @@ body.scale-cv{
 
 .scale-cv .skills_name{
   margin-bottom: var(--mb-1);
+  min-width: 100px;
   font-size: 13px;
 }
 
@@ -253,7 +254,8 @@ img {
 
 /* LAYOUT */
 .bd-container {
-  max-width: 968px;
+  /* max-width: 968px; */
+  max-width: 1150px;
   width: calc(100% - 3rem);
   margin-left: var(--mb-3);
   margin-right: var(--mb-3);
@@ -490,9 +492,13 @@ img {
   font-size: var(--smaller-font-size);
 }
 /* SKILLS AND LANGUAGES */
-.skills_content,
+.skills_content{
+  grid-template-columns: repeat(5, 2fr);
+  margin-left: 03%;
+}
 .languages_content{
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  margin-left: 10%;
 }
 
 .languages_content{
@@ -504,6 +510,10 @@ img {
   display: flex;
   align-items: center;
   margin-bottom: var(--mb-3);
+}
+
+.skills_data_2{
+  margin-left: 30px;
 }
 
 .skills_circle,
@@ -649,12 +659,24 @@ img {
   }
 
   .languages_content{
-    grid-template-columns: repeat(3, max-content);
+    grid-template-columns: repeat(2, max-content);
     column-gap: 3.5rem;
+    margin-left: 0%;
   }
 
   .interests_container{
     grid-template-columns: repeat(4, max-content);
     column-gap: 3.5rem;
+  }
+
+  .skills_data_2{
+    margin-left: 30px;
+  }
+  .skills_content{
+    margin-left: 0%;
+  }
+
+  .skills_data{
+    margin-left: 05px;
   }
 }
